타이포그래피 / 레딩, 폰트 설정

--- a/D_01/local-test/index.html
+++ b/D_01/local-test/index.html
@@ -4,13 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Local Test Server</title>
+  <title>웹 타이포그래피 시스템</title>
+  <link rel="stylesheet" href="css/init.css">
+  <link rel="stylesheet" href="css/typography.css">
+  <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/style.css">
-  <script src="js/main.js" async defer></script>
 </head>
-<body>
+<body class="show-leading">
 
-  <button type="button">click me</button>
+  <!-- 본문(body text) / 단락(paragraph) -->
+  <div class="container">
+    <p>
+      Brunch의 UI는 대부분 타이포그래피 기반이고 읽는 것에 초점이 맞춰져 있어, 디자이너는 2가지 서로 다른 폰트를 선택했습니다.
+    </p>
+    <p>
+      사용자의 주목을 이끌어내는 헤더 텍스트는 명조 계열 인 나눔 명조(Nanum Myeongjo)를, 지속적으로 읽어야 하는 바디 텍스트는 고딕 계열 인 나눔 바른고딕(콘텐츠를 위한)을 사용해 사용자의 목적에 부합한 결과를 이끌어 냈습니다. 이는 사용자가 읽어야 할 컨텐츠와 그렇지 않은 것을 명확하게 구분 가능하게 합니다.
+    </p>
+    <p>
+      사용자의 기대에 부응하는 폰트 선택은 이처럼 굉장한 효과적입니다. 그동안 우리는 수천 권의 책, 잡지 그리고 신문들에서 명조 계열 폰트를 읽어오면서 장문의 콘텐츠를 소비하곤 했습니다. 하지만 오늘날은 웹의 출현 이후 두드러지게 고딕 계열 폰트를 바디 테스트에 사용합니다.
+    </p>
+  </div>
+
+  <!-- 제목(heading) -->
+
+  <!-- 링크, 목록, 표, 폼, ... -->
 
 </body>
 </html>
