--- a/D_02/Practice/1200-12__grid-system/index.html
+++ b/D_02/Practice/1200-12__grid-system/index.html
@@ -18,10 +18,12 @@
           .col.is-4 컬럼 .col.is-4 컬럼 .col.is-4 컬럼
   -->
 
+  <div class="container"></div>
+
   <script>
     // 그리드 토글 함수 실행
     // window.toggleGrid(container, className);
-    var container = 'body';
+    var container = '.container';
     window.toggleGrid(container, 'show-grid');
   </script>
 </body>
