Grid System CSS 파일 완성

--- a/D_02/Practice/1200-12__grid-system/index.html
+++ b/D_02/Practice/1200-12__grid-system/index.html
@@ -18,7 +18,19 @@
           .col.is-4 컬럼 .col.is-4 컬럼 .col.is-4 컬럼
   -->
 
-  <div class="container"></div>
+  <div class="container">
+    <div class="row">
+      <!-- 2 Columns -->
+      <div class="col is-6">column 1</div>
+      <div class="col is-6">column 2</div>
+    </div>
+    <div class="row">
+      <!-- 3 Columns -->
+      <div class="col is-4">column 1</div>
+      <div class="col is-4">column 2</div>
+      <div class="col is-4">column 3</div>
+    </div>
+  </div>
 
   <script>
     // 그리드 토글 함수 실행
