1200 Grid System (12 Column) 완성

--- a/D_02/Practice/1200-12__grid-system/index.html
+++ b/D_02/Practice/1200-12__grid-system/index.html
@@ -22,7 +22,7 @@
     <div class="row">
       <!-- 2 Columns -->
       <div class="col is-6">column 1</div>
-      <div class="col is-6">column 2</div>
+      <div class="col is-3 is-o-3">column 2</div>
     </div>
     <div class="row">
       <!-- 3 Columns -->
