그래픽 디자인 -> 웹 디자인 화

--- a/D_02/Practice/1200-12__grid-system/index.html
+++ b/D_02/Practice/1200-12__grid-system/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>1200 그리드 시스템 활용</title>
+  <link href="https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <script src="js/toggleGrid.js"></script>
 </head>
