--- a/D_02/Practice/1200-12__grid-system/index.html
+++ b/D_02/Practice/1200-12__grid-system/index.html
@@ -30,7 +30,7 @@
       <div class="col is-6">
         <!-- valid -->
         <img src="./assets/infographic-valid.jpg" alt="">
-        <h2 class="h2 is-valid headline">Desktop First 방식을 사용할 경우 좋은점</h2>
+        <h2 class="h2 is-valid headline">Mobile First 방식을 사용할 경우 좋은점</h2>
         <div class="content">
           <p>
              사용자의 생활 패턴은 데스크탑에서 모바일로 이동한지 오래이다. 오늘날 대부분의 사용자는 일어나자마자 모바일을 사용한다. 즉, 데스크탑보다 먼저 모바일을 사용한다는 것이다.
