올바른 데이터 유형 검증

--- a/D_03/ECMAScript/v5/index.html
+++ b/D_03/ECMAScript/v5/index.html
@@ -16,7 +16,7 @@
 
 <script>
   var tester = document.querySelector('.my-carousel');
-  var my_caro = Carousel(tester, {
+  var my_caro = new Carousel(tester, {
     animate: true,
     infinite: false,
     autoSlide: true
