front-end develop module management

--- a/D_04/learn-webpack/index.html
+++ b/D_04/learn-webpack/index.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Webpack 모듈 번들러</title>
+  <title>Webpack 모듈(파일들) 번들러(묶음)</title>
 </head>
 <body>
 
-
+  <script src="https://unpkg.com/lodash"></script>
+  <script src="https://unpkg.com/jquery"></script>
+  <script src="./src/main.js"></script>
 </body>
 </html>
