--- a/D_04/learn-webpack/index.html
+++ b/D_04/learn-webpack/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
 
-  <script src="https://unpkg.com/lodash"></script>
-  <script src="https://unpkg.com/jquery"></script>
-  <script src="./src/main.js"></script>
+  <!-- Webpack -->
+  <script src="./dist/main.js"></script>
+
+  <!-- Front End -->
+  <!-- <script src="https://unpkg.com/lodash"></script> -->
+  <!-- <script src="https://unpkg.com/jquery"></script> -->
+  <!-- <script src="./src/main.js"></script> -->
 </body>
 </html>
